Added small changes with route names

--- a/Project-API/TODO.txt
+++ b/Project-API/TODO.txt
@@ -1,1 +1,9 @@
-﻿I need to convert timestamp to datetime in Order Controller.
+﻿To do:
+
+1. I need to convert timestamp to datetime in Order Controller. done
+
+Which informations needs:
+
+restaurant: dish_id, 
+Rider: order_id, user_address, user_name, restaurant_address
+User
